CheckStyle
-Refactor code apply rules checkStyle
