# src/main/java/cl/lgutierrez/example/app/infraestructure/controller/JwtController.java
@@ -4,10 +4,10 @@ import cl.lgutierrez.example.app.JwtApi;
 import cl.lgutierrez.example.app.domain.model.User;
 import cl.lgutierrez.example.app.domain.port.input.CreateUser;
 import cl.lgutierrez.example.app.domain.port.input.FindUserById;
-import cl.lgutierrez.example.app.infraestructure.controller.mapper.todomain.CreateUserDTOToUserMapper;
-import cl.lgutierrez.example.app.infraestructure.controller.mapper.todto.UserToGetUserDTOMapper;
-import cl.lgutierrez.example.app.model.CreateUserDTO;
-import cl.lgutierrez.example.app.model.GetUserDTO;
+import cl.lgutierrez.example.app.infraestructure.controller.mapper.todomain.CreateUserDtoToUserMapper;
+import cl.lgutierrez.example.app.infraestructure.controller.mapper.todto.UserToGetUserDtoMapper;
+import cl.lgutierrez.example.app.model.CreateUserDto;
+import cl.lgutierrez.example.app.model.GetUserDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -15,30 +15,29 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 public class JwtController implements JwtApi {
 
-    private final FindUserById findUserById;
-    private final CreateUser createUser;
-    private final CreateUserDTOToUserMapper mapperToDomain;
-    private final UserToGetUserDTOMapper mapperToDTO;
+  private final FindUserById findUserById;
+  private final CreateUser createUser;
+  private final CreateUserDtoToUserMapper mapperToDomain;
+  private final UserToGetUserDtoMapper mapperToDto;
 
-    public JwtController(FindUserById findUserById,
-                          CreateUser createUser,
-                          CreateUserDTOToUserMapper mapperToDomain,
-                          UserToGetUserDTOMapper mapperToDTO) {
-        this.findUserById = findUserById;
-        this.createUser = createUser;
-        this.mapperToDomain = mapperToDomain;
-        this.mapperToDTO = mapperToDTO;
-    }
+  public JwtController(FindUserById findUserById,
+                       CreateUser createUser,
+                       CreateUserDtoToUserMapper mapperToDomain,
+                       UserToGetUserDtoMapper mapperToDto) {
+    this.findUserById = findUserById;
+    this.createUser = createUser;
+    this.mapperToDomain = mapperToDomain;
+    this.mapperToDto = mapperToDto;
+  }
 
-    @Override
-    public ResponseEntity<GetUserDTO> createUserWithoutJwt(CreateUserDTO createUserDTO) {
-        User userDb = createUser.execute(mapperToDomain.toDomain(createUserDTO));
-        System.out.println("lo crea jwt");
-        return ResponseEntity.status(HttpStatus.CREATED).body(mapperToDTO.toDTO(userDb));
-    }
+  @Override
+  public ResponseEntity<GetUserDto> createUserWithoutJwt(CreateUserDto createUserDto) {
+    User userDb = createUser.execute(mapperToDomain.toDomain(createUserDto));
+    return ResponseEntity.status(HttpStatus.CREATED).body(mapperToDto.toDto(userDb));
+  }
 
-    @Override
-    public ResponseEntity<GetUserDTO> findUserById(String userId) {
-        return ResponseEntity.ok(this.mapperToDTO.toDTO(findUserById.execute(userId)));
-    }
+  @Override
+  public ResponseEntity<GetUserDto> findUserById(String userId) {
+    return ResponseEntity.ok(this.mapperToDto.toDto(findUserById.execute(userId)));
+  }
 }
