# src/main/resources/api.yaml
@@ -26,7 +26,7 @@ paths:
         "200":
           description: "A list of users."
           schema:
-            $ref: "#/definitions/GetUsersDTO"
+            $ref: "#/definitions/GetUsersDto"
         "500":
           description: "Response with error."
           schema:
@@ -42,12 +42,12 @@ paths:
           name: userDTO
           description: "User save"
           schema:
-            $ref: '#/definitions/CreateUserDTO'
+            $ref: '#/definitions/CreateUserDto'
       responses:
         "201":
           description: "A user created."
           schema:
-            $ref: "#/definitions/GetUserDTO"
+            $ref: "#/definitions/GetUserDto"
         "500":
           description: "Response with error."
           schema:
@@ -74,7 +74,7 @@ paths:
         "200":
           description: "A users"
           schema:
-            $ref: "#/definitions/GetUserDTO"
+            $ref: "#/definitions/GetUserDto"
         "500":
           description: "Response with error."
           schema:
@@ -90,12 +90,12 @@ paths:
           name: userDTO
           description: "User save"
           schema:
-            $ref: '#/definitions/CreateUserDTO'
+            $ref: '#/definitions/CreateUserDto'
       responses:
         "201":
           description: "A user created."
           schema:
-            $ref: "#/definitions/GetUserDTO"
+            $ref: "#/definitions/GetUserDto"
         "500":
           description: "Response with error."
           schema:
@@ -121,14 +121,14 @@ paths:
         "200":
           description: "A users"
           schema:
-            $ref: "#/definitions/GetUserDTO"
+            $ref: "#/definitions/GetUserDto"
         "500":
           description: "Response with error."
           schema:
             $ref: "#/definitions/ErrorResponse"
 
 definitions:
-  GetUsersDTO:
+  GetUsersDto:
     type: "object"
     required:
       - "characters"
@@ -136,8 +136,8 @@ definitions:
       characters:
         type: "array"
         items:
-          $ref: "#/definitions/GetUserDTO"
-  GetUserDTO:
+          $ref: "#/definitions/GetUserDto"
+  GetUserDto:
     type: "object"
     required:
       - "id"
@@ -150,7 +150,7 @@ definitions:
         type: "string"
       email:
         type: "string"
-  CreateUserDTO:
+  CreateUserDto:
     type: "object"
     required:
       - "username"
